[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bot_telegram"  # Укажите имя вашего проекта
version = "0.1.0"           # Укажите версию проекта
description = "A description of your project"
authors = [{name = "Grigory", email = "lololohka057@gmail.com"}]
dependencies = [
    "python-telegram-bot",
    "asyncpg",
    "fpdf",
    "yookassa"
]